# ont

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml
apps/claim/: README.md  package.json
apps/cli/: package.json
apps/indexer/: PURPOSE.md  package.json
apps/publisher/: PURPOSE.md  README.md  package.json  tsconfig.json
apps/resolver/: PURPOSE.md  (+1 more)
docker/: entrypoint.sh  private-signet-miner.Dockerfile  private-signet-miner.sh
docs/: DESIGN.md  GLOSSARY.md  LAUNCH.md  ONT.md  ONT_DESIGN_BRIEF.md  ONT_ONE_PAGER.md  OPEN_QUESTIONS.md  README.md  RISKS.md
mobile/: App.tsx  HANDOFF.md  M1_SCOPE.md  README.md  ROADMAP.md  TESTFLIGHT.md  app.json  eas.json  index.ts  metro.config.js  ont-package-roots.cjs  package-lock.json  package.json  tsconfig.json
rust/ont-core/: Cargo.toml
rust/ont-core/src/: bond_tx.rs  lib.rs  payload.rs  root_anchor.rs
scripts/: b2-vector-now-draft.mjs  bootstrap-private-signet-vps.sh  build-workspaces.mjs  check-deploy-clean-stack.mjs  check-doc-links.sh  check-mobile-verify-graph.mjs  check-onepager-parity.mjs  check-surface-boundaries.mjs  deploy-private-signet-vps.sh  deploy-vps.sh  e2e-fixture-web.mjs  esplora-rpc-shim.mjs  fix-doc-links.py  g3-seed-anchor.mjs  gen-audit-map.mjs  generate-fixture-batch-material.mjs  install-private-signet-electrum.sh  private-signet-auction-boundary.mjs  private-signet-auction-phase-gallery.mjs  private-signet-auction-smoke.mjs  private-signet-auto-mine.sh  private-signet-fund.sh  private-signet-mine.sh  private-signet-smoke-lib.mjs  private-signet-value-recovery.mjs  render-ont-one-pager-pdf.mjs  render-ont-parameter-review-pdf.mjs  review-refresh.sh
(+643 files in other folders)
