[package]
name = "ont-core"
version = "0.0.0"
edition = "2021"
publish = false
description = "ONT Rust transaction-construction core (BDK). Spike scaffold — see ~/.sprout/RESEARCH/ONT_BDK_RUST_BUILD_PLAN_2026_06_06.md"

[dependencies]
# bdk_esplora (async) lands at S7 (signet broadcast); bond-tx construction needs
# only bdk_wallet.
bdk_wallet = "3"
anyhow = "1"

[dev-dependencies]
# Enable bdk_wallet's test-utils for hermetic funded wallets in unit tests.
bdk_wallet = { version = "3", features = ["test-utils"] }
